--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Space Invaders</title>
 </head>
 <body>
+
+    <h3>Score :</h3>
+
+    <div class="grille"></div>
     
     <script src="app.js"></script>
 </body>
